--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -10,6 +10,11 @@ $font-weight-600: 600;
 $font-weight-bold: bold;
 $font-weight-bolder: bolder;
 
+// Text Aligns
+$text-align-center: center;
+$text-align-left: left;
+$text-align-right: right;
+
 // Body Variable
 $body-font-size: 13px;
 $body-font-family: "Barlow Semi Condensed", sans-serif;
