--- a/css/style.css
+++ b/css/style.css
@@ -935,9 +935,27 @@ ul, ol {
 
 a {
   text-decoration: none;
+  transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -webkit-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
 }
 a:hover {
   text-decoration: none;
+}
+
+.main-footer {
+  text-align: center;
+  margin: 10px 0;
+  font-style: italic;
+}
+.main-footer a {
+  color: #7541c8;
+  text-decoration: underline;
+}
+.main-footer a:hover {
+  color: #19212e;
 }
 
 /*# sourceMappingURL=style.css.map */
