--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,8 @@
+/* ========== Contain Footer style ========== */
+@import '../partials/variables';
+@import '../partials/colors';
+
+/* ========== Footer ========== */
 .main-footer {
     text-align: $text-align-center;
     margin: 10px 0;
