--- a/sass/partials/_colors.scss
+++ b/sass/partials/_colors.scss
@@ -1,6 +1,6 @@
 /* Public Colors */
 $black: #000;
-$White: hsl(0, 0%, 100%);
+$white: hsl(0, 0%, 100%);
 
 // Primary
 $Moderate-violet: hsl(263, 55%, 52%);
